style(v0128): 코드 정렬